--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header id="home">
+    <header id="home" class="container">
         <div class="head">
             <div class="content">
                 <div class="img">
@@ -29,14 +29,14 @@
                         <a href="#about">
                             <li class="cambio">About us</li>
                         </a>
-                        <a href="#steps">
-                            <li class="cambio">Video on team</li>
-                        </a>
                         <a href="#services">
                             <li class="cambio">Services</li>
                         </a>
-                        <a href="#aplication">
-                            <li class="cambio">Aplication</li>
+                        <a href="#offers">
+                            <li class="cambio">Offers</li>
+                        </a>
+                        <a href="#footer">
+                            <li class="cambio">Footer</li>
                         </a>
                         <li><i class="fa-solid fa-bars menu"></i></li>
                     </ul>
@@ -52,14 +52,14 @@
                     <a href="#about">
                         <li class="move_up">About us</li>
                     </a>
-                    <a href="#steps">
-                        <li class="move_up">Video On The Team</li>
-                    </a>
                     <a href="#services">
                         <li class="move_up">Services</li>
                     </a>
-                    <a href="#aplication">
-                        <li class="move_up">Aplication</li>
+                    <a href="#offers">
+                        <li class="move_up">Offers</li>
+                    </a>
+                    <a href="#footer">
+                        <li class="move_up">Footer</li>
                     </a>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
             <div class="img">
                 <img src="img/img_principal.svg" alt="">
             </div>
-            <div class="container">
+            <div class="content">
                 <h1>WELCOME TO THE MODEL HOUSE</h1>
                 <p>
                     Would you like to seek or provide your services in real estate remodeling?
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section class="offers container" id="aplication">
+        <section class="offers container" id="offers">
             <h1>Offers</h1>
             <div class="time_offers">
                 <div class="month">
