fix: Update video about the team

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
             to satisfy their requests. Also, exhaustive market research was carried out to achieve effective
             solutions, so that consumers can use our services with comfort and confidence. In addition, we use
             innovative technology to solve customer problems.</p>
-        <iframe height="394" src="https://www.youtube.com/watch?v=VbQo7Us4UqM" title="About the team" 
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="about-the-team video">
+        <iframe height="394" src="https://www.youtube-nocookie.com/embed/VbQo7Us4UqM"  
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     </div>
 </section>
 
